# pynocular

./: .cruft.json  .flake8  .gitignore  .pre-commit-config.yaml  CODEOWNERS  LICENSE.md  README.md  pull_request_template.md  pyproject.toml  setup.cfg
.circleci/: @config.yml  config.yml
.circleci/commands/: bump-branch-version.yml  cancel-job.yaml  conditional-cancel.yml  github-release.yml  poetry-configure.yml  restore-test-cache.yml  save-test-cache.yml  store-test-artifacts.yml
.circleci/executors/: default.yml  python-3_6-medium.yml  python-3_7-medium.yml  python-3_8-medium.yml  python-3_9-medium.yml  python-medium.yml
.circleci/jobs/: build-test-3_6.yml  build-test-3_9.yml  build-test.yml  poetry-publish.yml  send-slack-on-pr-success.yml
.circleci/scripts/: bump-version.sh
.circleci/workflows/: publish.yml  pull-request-tests.yml
.githooks/pre-commit-scripts/: circleci.sh  common.sh  cruft-check.sh
ns_sql_utils/: __init__.py  aiopg_transaction.py  config.py  database_model.py  db_util.py  engines.py  example.py  exceptions.py
pynocular/: __init__.py  aiopg_transaction.py  config.py  database_model.py  db_util.py  engines.py  evaluate_column_element.py  exceptions.py  foreign_reference.py  model.py  nested_database_model.py  patch_models.py  util.py  uuid_str.py
pynocular/backends/: base.py  context.py  memory.py  postgres.py  sql.py  util.py
tests/functional/: BUILD  conftest.py  test_database_model.py  test_db_util.py  test_foreign_references.py  test_model.py  test_nested_database_model.py  test_transactions.py
tests/unit/: test_db_util.py  test_evaluate_column_element.py  test_example.py  test_model.py  test_patch_models.py  test_task_context_connection.py
