[tool.poetry]
name = "pynocular"
version = "0.5.0"
description = "Lightweight ORM that lets you query your database using Pydantic models and asyncio"
authors = [
  "RJ Santana <ssantana@narrativescience.com>",
  "Patrick Hennessy <phennessy@narrativescience.com>",
  "Gregory Berns-Leone <gbernsleone@narrativescience.com>"
]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/NarrativeScience/pynocular"
repository = "https://github.com/NarrativeScience/pynocular"

[tool.poetry.dependencies]
python = "^3.6.5"
aenum = "^2.1"
aiocontextvars = "==0.2.2"
aiopg = "==0.16.0"
asyncpg = "==0.15.0"
asyncpgsa = "==0.23.0"
backoff = "==1.10.0"
pydantic = "^1.6"
SQLAlchemy = ">=1.3.19<1.4"

[tool.poetry.dev-dependencies]
pre-commit = "^2.10.1"
pytest = "^6.2.2"
pytest-asyncio = "^0.15"
black = {version = "^21.7b0", allow-prereleases = true}
cruft = "^2.9.0"

[tool.cruft]
skip = ["pyproject.toml", "pynocular", "tests", "README.md", ".circleci/config.yml"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
