[tool.poetry]
name = "pynocular"
version = "2.0.0-rc.3"
description = "Lightweight ORM that lets you query your database using Pydantic models and asyncio"
authors = [
  "RJ Santana <ssantana@narrativescience.com>",
  "Patrick Hennessy <phennessy@narrativescience.com>",
  "Gregory Berns-Leone <gbernsleone@narrativescience.com>"
]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/NarrativeScience/pynocular"
repository = "https://github.com/NarrativeScience/pynocular"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.6"
databases = {extras = ["postgresql"], version = "^0.5.5"}
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
pre-commit = "^2.10.1"
pytest = "^7.1.1"
pytest-asyncio = "^0.15"
black = "^22.3.0"
cruft = "^2.9.0"
pytest-lazy-fixture = "^0.6.3"

[tool.cruft]
skip = ["pyproject.toml", "pynocular", "tests", "README.md", ".circleci/config.yml"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
